# dump_ciede2000

./: Cargo.toml  README.md  appveyor.yml
src/: main.rs
src/delta_e/: de2000.rs
src/rgbtolab/: mod.rs
