[package]
name = "dump_ciede2000"
version = "0.1.0"
authors = ["Kyle Siefring <kylesiefring@gmail.com>"]
edition = "2018"

[dependencies]
y4m = "0.3"
clap = {version = "2", default-features = false}
#delta_e = {path = "../DeltaE"}
delta_e = { git = "https://github.com/KyleSiefring/DeltaE", branch = "dump_ciede2000" }
itertools = "0.8.0"

[profile.release]
debug = true
